8150689: Thread dump report "waiting to re-lock in wait()" shows incorrectly

"waiting to re-lock in wait()" is now shown in the frame where relocking is taking place

Reviewed-by: dholmes, dcubed