src/hotspot/share/runtime/thread.cpp
@@ -2943,7 +2943,6 @@ void JavaThread::print_on(outputStream *st, bool print_extended_info) const {
     st->print_cr("   java.lang.Thread.State: %s", java_lang_Thread::thread_status_name(thread_oop));
   }
 #ifndef PRODUCT
-  print_thread_state_on(st);
   _safepoint_state->print_on(st);
 #endif // PRODUCT
   if (is_Compiler_thread()) {
